--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-awesome-swiper@4.1.1/dist/vue-awesome-swiper.js"></script>
-<!--    <link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
+    <link rel="shortcut icon" type="image/png" href="<%= BASE_URL%>favicon.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
